[tool.poetry]
name = "meadowrun"
version = "0.1.7"
description = "The easiest way to run python code on one or more remote machines"
authors = ["Richard Lee <hrichardlee@gmail.com>"]
homepage = "https://github.com/meadowdata/meadowrun"
repository = "https://github.com/meadowdata/meadowrun"
keywords = []
packages = [
    { include = "meadowrun", from = "src" },
]

[tool.poetry.scripts]
meadowrun-local = 'meadowrun.run_job_local_main:command_line_main'
meadowrun-manage-ec2 = "meadowrun.manage:main_ec2"
meadowrun-manage-azure-vm = "meadowrun.manage:main_azure_vm"

[tool.poetry.dependencies]
python = "^3.7"
protobuf = "^3.18.1"
cloudpickle = "^2.0.0"
aiobotocore = "^2.1.2"
aiohttp = "^3.8.0"
psutil = "^5.8.0"
boto3 = "1.21.21"
fabric = "^2.6.0"
filelock = "^3.6.0"
typing-extensions = "^4.1.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mypy = "0.*"
black = {version = "^22.1", allow-prereleases = true}
grpcio-tools = "^1.39.0"
types-protobuf = "^3.19.12"
types-pytz = "^2021.3.5"
mypy-protobuf = "^3.0.0"
# a big controversy: https://github.com/PyCQA/flake8/pull/1438
flake8 = "3.9.2"
pytest-asyncio = "^0.18.2"
types-psutil = "^5.8.22"
flake8-noqa = "^1.2.1"
boto3-stubs = "^1.21.11"
types-aiobotocore = {extras = ["essential"], version = "^2.1.1"}
types-paramiko = "^2.8.17"
types-setuptools = "^57.4.12"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.15"
mkdocstrings = {extras = ["python"], version = "^0.18.1"}
mkdocs-awesome-pages-plugin = "^2.7.0"
pytest-mock = "^3.7.0"
types-requests = "^2.27.30"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
log_level = "DEBUG"
log_cli = true
log_cli_level = "DEBUG"
addopts = "-vvv --strict-markers"
asyncio_mode="auto"

[tool.mypy]
files = "src,tests"

show_column_numbers = true
show_error_codes = true
pretty = true

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
allow_redefinition = true
check_untyped_defs = true

exclude = ["meadowrun/_vendor"]  # really meant to just exclude meadowrun._vendor.*


[[tool.mypy.overrides]]
module = ["meadowrun.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "boto3",
    "cloudpickle",
    "fabric",
]
ignore_missing_imports = true
