[tool.poetry]
name = "covid"
version = "0.1.0"
description = ""
authors = ["Hyunho Richard Lee <hrichardlee@gmail.com>"]
packages = [{ include = "scripts_redirect.py" }]

# This section should not be necessary, this is a workaround until
# https://github.com/python-poetry/poetry/issues/3265 is fixed
[tool.poetry.scripts]
meadowgrid_coordinator_ = 'scripts_redirect:meadowgrid_coordinator_'
meadowgrid_agent_ = 'scripts_redirect:meadowgrid_agent_'
meadowflow_ = 'scripts_redirect:meadowflow_'

[tool.poetry.dependencies]
python = "^3.9"
# alternate to pull from testpypi: meadowdata = "^0.1.0"
meadowdata = { path = "../../../meadowdata/", develop = true }
jupyter = "^1.0.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# alternate to pull from testpypi:
# [[tool.poetry.source]]
# name = "testpypi"
# url = "https://test.pypi.org/simple/"
# secondary = true
